# Reversi

./: Cargo.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/ai/: evaluation.rs  local_service.rs  mock_service.rs  mod.rs  service.rs  strategies.rs
src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs
src/api/ai_battle/: config_service.rs  dto.rs  handlers.rs  mod.rs  routes.rs  service.rs
src/game/: board.rs  mod.rs  rules.rs  state.rs  types.rs
src/session/: ai_battle_manager.rs  mod.rs
tests/: api_integration_tests.rs  config_system_tests.rs  property_based_tests.rs
