[package]
name = "Reversi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
async-trait = "0.1"

[dev-dependencies]
proptest = "1.0"
tempfile = "3.8"
futures = "0.3"
